--- a/src/app/Quiz/Quiz.module.css
+++ b/src/app/Quiz/Quiz.module.css
@@ -315,7 +315,7 @@ text-align: center;
 margin-bottom: 15px;
 }
 
-.name_e-mail{
+.name_e_mail{
 display: flex;
 width: 230px;
 align-items: center;
